2003-03-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: now the Inherits attribute works as expected for
	global.asax file.

2003-03-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CompilationException.cs:
	* ParseException.cs: display the correct line number in error messages.

	* AspElements.cs: added TargetSchema attribute for control. It's
	ignored.

2003-03-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: fixed the hack to work under windows.
	* CachingCompiler.cs: under windows, try 'mcs.bat' and then 'mcs'.

2003-03-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: hacks to work-around our buggy System.Uri.

2003-03-17 George Kodinov <gkodinov@openlinksw.co.uk>

        * BaseCompiler.cs: Removed a FIXME: and added a correct calculation of
	app's private bin path

2003-03-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs:
	* BaseCompiler.cs:
	* CachingCompiler.cs:
	* CompilationResult.cs:
	* GlobalAsaxCompiler.cs:
	* PageCompiler.cs:
	* UserControlCompiler.cs: recompile the page if dependencies change.

2003-02-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: corrected typo and wrong fix.

2003-02-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: fixed code generation for Table/TableRow/TableCell
	when used explicitly.

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspElements.cs: get the property Type for controls that use
	ParseChildren with a property name.

	* AspGenerator.cs: generate correct signature for the method that
	adds controls to the default property in ParseChildren.

2003-02-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: rethrow exceptions that may come from parsing or 
	compilation if a user control.

2003-02-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: throw ParseException on parse
	error.

	* AspParser.cs: added Line and Column props.
